--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <script>
-        const images = ['background/lp_loading.gif'];
+        const images = ['background/lp_loading.webm'];
         let currentIdx = 0;
         const bgSlider = document.getElementById('bg-slider');
 
